--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 
         <!-- Controllers -->
         <script src="js/controllers/loginController.js"></script>
+        <script src="js/controllers/logoutController.js"></script>
         <script src="js/controllers/registerController.js"></script>
         <script src="js/controllers/dashboardController.js"></script>
         
