--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
         <script src="js/controllers/dashboardController.js"></script>
         <script src="js/controllers/navController.js"></script>
         <script src="js/controllers/teamController.js"></script>
+        <script src="js/controllers/projectsController.js"></script>
+        <script src="js/controllers/messagesController.js"></script>
+        <script src="js/controllers/calendarController.js"></script>
         
     </head><!-- End of Head -->
     
