--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="google-site-verification" content="i7gH1Kr60qhv1PuA-oxyAYyT8jzJ1gUGO4D3t3hgrBA" />
 
         <title>{{title}}</title>
 
