Workign Google SEO. Changed title to match search result.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-site-verification" content="i7gH1Kr60qhv1PuA-oxyAYyT8jzJ1gUGO4D3t3hgrBA" />
 
+        <title>Tracing Ink | Home</title>
         <title>{{title}}</title>
 
         <link rel="stylesheet" href="/css/normalize.css"><!-- Normalize.CSS-->
