Finished the addMember functionality. This will now register a user with member level privileges. A manager or a master admin can send a invite to a user to allow them access to the system.Reconfigured addClient route which broke in the process of building the other routes and the add Manager. I changed a mongo method from findOne() to find() and it would find a user's in the database even though the user didn't exist. I know, wierd huh?

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
         <script src="js/controllers/calendarController.js"></script>
         <script src="js/controllers/clientsController.js"></script>
         <script src="js/controllers/managerController.js"></script>
+        <script src="js/controllers/memberController.js"></script>
         
     </head>
     <!-- End of Head -->
