--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
         
         <!-- Directives -->
         <script src="js/directives/messageBar.js"></script>
+        <script src="js/directives/checklist-model.js"></script>
         
     </head>
     <!-- End of Head -->
