Completed gravatar functionality. Now, to finish the conversations and the app should be done for version 1.

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,11 @@
                 </div>
 
                 <div id="user-profile-btn">    
-                    <img src="img/user_profile_blank.png" id="user-profile-img">
+                    
+                    <a href="https://en.gravatar.com/">
+                        <img ng-src="{{user.gravatarUrl}}" id="user-profile-img">
+                    </a>
+                     
                 </div>
 
             </div>
