Styled the chatbox a little better.

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
                 <div id="user-profile-btn">    
                     
                     <a href="https://en.gravatar.com/">
-                        <img ng-src="{{user.gravatarUrl}}" id="user-profile-img">
+                        <img class="avatar" ng-src="{{user.gravatarUrl}}" id="user-profile-img">
                     </a>
                      
                 </div>
